# avantpy-extended

./: Pipfile  README.md  pyproject.toml  requirements.txt
avantpy/: __init__.py  __main__.py  import_hook.py  invocation.py
avantpy/dialects/: pyga.py
avantpy/wrappers/: __init__.py  _index.yaml  _translated.py  antam.pyga  curses.pyga  díreach.pyga  panda3d.pyga  sdl2.pyga  sdl2.yaml
avantpy/wrappers/direct/: showbase.pyga
avantpy/wrappers/díreach/cgu/: TéacsScáileáin.pyga
avantpy/wrappers/díreach/taispeánadhbonn/: OibiachtDíreach.pyga  TaispeánadhBonn.pyga
avantpy/wrappers/díreach/tasc/: Tasc.pyga
avantpy/wrappers/panda3d/: core.pyga  croílár.pyga  direct.pyga
avantpy_translations/: sdl2.yaml
translation_packages/curses/: pyproject.toml
translation_packages/curses/avantpy_trans/curses/: __init__.py
translation_packages/díreach/: pyproject.toml
translation_packages/panda3d/: pyproject.toml
translation_packages/panda3d/avantpy_trans/panda3d/: definition.yaml
translation_packages/sdl2/: pyproject.toml
